[package]
name = "grand"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = { version = "0.3.2", features = ["wasm_js"]}
rust_decimal = { version = "1.37.1", features = ["macros"] }
wasm-bindgen = "0.2.100"

[target.wasm32-unknown-unknown]
rustflags = ['--cfg', 'getrandom_backend="wasm_js"']
